--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <header>
   <h1>Best Shopping Store</h1>
-  <p class="subtitle">Welcome to Elham Afghan's page – Powered by Amazon</p>
+  <p class="subtitle">Welcome to Alham Afghan page – Powered by Amazon</p>
 </header>
 
 <div class="intro">
