--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
 <header>
   <h1>Best Shopping Store</h1>
-  <p class="subtitle">Welcome to Alham Afghan page – Powered by Amazon</p>
+  <p class="subtitle">"Welcome to Alham Afghan – Your Trusted Marketplace, Powered by Amazon"</p>
 </header>
 
 <div class="intro">
-  You can find all types of products through our page. If there's any issue, we'll help you fix it!
+ "Explore a wide range of products on our page. If you encounter any issues, we're here to assist you in resolving them!"
 </div>
 
 <div class="categories">
@@ -109,6 +109,22 @@
   <a class="category" href="https://www.amazon.com/s?k=sustainable&tag=bestshopp0cd1-20">Eco Products</a>
   <a class="category" href="https://www.amazon.com/s?k=diy&tag=bestshopp0cd1-20">DIY Tools</a>
 </div>
+<style>
+  .whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg');
+    background-size: cover;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+</style>
+
+<!-- WhatsApp Button -->
+<a href="https://wa.me/+93798933435" target="_blank" class="whatsapp-button"></a>
 
 </body>
 </html>
