--- a/index.html
+++ b/index.html
@@ -126,5 +126,17 @@
 <!-- WhatsApp Button -->
 <a href="https://wa.me/+93798933435" target="_blank" class="whatsapp-button"></a>
 
+   <div class="share-buttons">
+    <h3>Share this website</h3>
+
+    <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=https://bestshoppingstore.github.io/" target="_blank">Facebook</a>
+    <a class="btn tw" href="https://twitter.com/intent/tweet?url=https://bestshoppingstore.github.io/&text=Check%20out%20this%20amazing%20shopping%20website!" target="_blank">Twitter</a>
+    <a class="btn wa" href="https://wa.me/?text=Check%20out%20this%20amazing%20shopping%20website%20https://bestshoppingstore.github.io/" target="_blank">WhatsApp</a>
+    <a class="btn tg" href="https://t.me/share/url?url=https://bestshoppingstore.github.io/&text=Amazing%20Shopping%20Website!" target="_blank">Telegram</a>
+    <a class="btn li" href="https://www.linkedin.com/sharing/share-offsite/?url=https://bestshoppingstore.github.io/" target="_blank">LinkedIn</a>
+    <a class="btn em" href="mailto:?subject=Best%20Shopping%20Store&body=Check%20out%20this%20website:%20https://bestshoppingstore.github.io/" target="_blank">Email</a>
+    <a class="btn ig" href="https://www.instagram.com/" target="_blank">Instagram</a>
+  </div>
+</footer>
 </body>
 </html>
