--- a/index.html
+++ b/index.html
@@ -54,6 +54,60 @@
       transform: scale(1.05);
       color: #000;
     }
+    .whatsapp-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg');
+      background-size: cover;
+      border-radius: 50%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    footer {
+      background-color: #1e90ff;
+      color: white;
+      padding: 30px 20px;
+      margin-top: 40px;
+    }
+    .share-buttons {
+      margin-top: 20px;
+    }
+    .share-buttons h3 {
+      color: white;
+      margin-bottom: 15px;
+    }
+    .share-buttons .btn {
+      display: inline-block;
+      margin: 5px 10px;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      color: white;
+      transition: background 0.3s ease;
+    }
+    .fb { background: #3b5998; }
+    .fb:hover { background: #2d4373; }
+
+    .tw { background: #1da1f2; }
+    .tw:hover { background: #0d95e8; }
+
+    .wa { background: #25D366; }
+    .wa:hover { background: #1ebe57; }
+
+    .tg { background: #0088cc; }
+    .tg:hover { background: #0077b5; }
+
+    .li { background: #0077b5; }
+    .li:hover { background: #005983; }
+
+    .em { background: #6c757d; }
+    .em:hover { background: #5a6268; }
+
+    .ig { background: #C13584; }
+    .ig:hover { background: #962c6b; }
   </style>
 </head>
 <body>
@@ -106,37 +160,4 @@
   <a class="category" href="https://www.amazon.com/s?k=security&tag=bestshopp0cd1-20">Security</a>
   <a class="category" href="https://www.amazon.com/s?k=gift+ideas&tag=bestshopp0cd1-20">Gift Ideas</a>
   <a class="category" href="https://www.amazon.com/s?k=subscription+boxes&tag=bestshopp0cd1-20">Subscription Boxes</a>
-  <a class="category" href="https://www.amazon.com/s?k=sustainable&tag=bestshopp0cd1-20">Eco Products</a>
-  <a class="category" href="https://www.amazon.com/s?k=diy&tag=bestshopp0cd1-20">DIY Tools</a>
-</div>
-<style>
-  .whatsapp-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    width: 60px;
-    height: 60px;
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg');
-    background-size: cover;
-    border-radius: 50%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-</style>
-
-<!-- WhatsApp Button -->
-<a href="https://wa.me/+93798933435" target="_blank" class="whatsapp-button"></a>
-
-   <div class="share-buttons">
-    <h3>Share this website</h3>
-
-    <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=https://bestshoppingstore.github.io/" target="_blank">Facebook</a>
-    <a class="btn tw" href="https://twitter.com/intent/tweet?url=https://bestshoppingstore.github.io/&text=Check%20out%20this%20amazing%20shopping%20website!" target="_blank">Twitter</a>
-    <a class="btn wa" href="https://wa.me/?text=Check%20out%20this%20amazing%20shopping%20website%20https://bestshoppingstore.github.io/" target="_blank">WhatsApp</a>
-    <a class="btn tg" href="https://t.me/share/url?url=https://bestshoppingstore.github.io/&text=Amazing%20Shopping%20Website!" target="_blank">Telegram</a>
-    <a class="btn li" href="https://www.linkedin.com/sharing/share-offsite/?url=https://bestshoppingstore.github.io/" target="_blank">LinkedIn</a>
-    <a class="btn em" href="mailto:?subject=Best%20Shopping%20Store&body=Check%20out%20this%20website:%20https://bestshoppingstore.github.io/" target="_blank">Email</a>
-    <a class="btn ig" href="https://www.instagram.com/" target="_blank">Instagram</a>
-  </div>
-</footer>
-</body>
-</html>
+  <a class="category"
