--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </header>
 
 <div class="intro">
- "Explore a wide range of products on our page. If you encounter any issues, we're here to assist you in resolving them!"
+  "Explore a wide range of products on our page. If you encounter any issues, we're here to assist you in resolving them!"
 </div>
 
 <div class="categories">
@@ -160,4 +160,19 @@
   <a class="category" href="https://www.amazon.com/s?k=security&tag=bestshopp0cd1-20">Security</a>
   <a class="category" href="https://www.amazon.com/s?k=gift+ideas&tag=bestshopp0cd1-20">Gift Ideas</a>
   <a class="category" href="https://www.amazon.com/s?k=subscription+boxes&tag=bestshopp0cd1-20">Subscription Boxes</a>
-  <a class="category"
+  <a class="category" href="https://www.amazon.com/s?k=home+improvement&tag=bestshopp0cd1-20">Home Improvement</a>
+</div>
+
+<a class="whatsapp-button" href="https://wa.me/+93798933435" target="_blank"></a>
+
+<footer>
+  <div class="share-buttons">
+    <h3>Share Our Store</h3>
+    <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=https://bestshoppingstore.github.io" target="_blank">Facebook</a>
+    <a class="btn tw" href="https://twitter.com/intent/tweet?url=https://bestshoppingstore.github.io" target="_blank">Twitter</a>
+    <a class="btn tg" href="https://t.me/share/url?url=https://bestshoppingstore.github.io" target="_blank">Telegram</a>
+    <a class="btn wa" href="https://wa.me/?text=Check%20out%20this%20store%20https://bestshoppingstore.github.io" target="_blank">WhatsApp</a>
+  </div>
+</footer>
+</body>
+</html>
