--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 
     .ig { background: #C13584; }
     .ig:hover { background: #962c6b; }
+
+    .yt { background: #FF0000; }
+    .yt:hover { background: #e60000; }
   </style>
 </head>
 <body>
@@ -160,19 +163,23 @@
   <a class="category" href="https://www.amazon.com/s?k=security&tag=bestshopp0cd1-20">Security</a>
   <a class="category" href="https://www.amazon.com/s?k=gift+ideas&tag=bestshopp0cd1-20">Gift Ideas</a>
   <a class="category" href="https://www.amazon.com/s?k=subscription+boxes&tag=bestshopp0cd1-20">Subscription Boxes</a>
-  <a class="category" href="https://www.amazon.com/s?k=home+improvement&tag=bestshopp0cd1-20">Home Improvement</a>
+  <a class="category" href="https://www.amazon.com/s?k=food&tag=bestshopp0cd1-20">Food</a>
 </div>
 
-<a class="whatsapp-button" href="https://wa.me/+93798933435" target="_blank"></a>
+<!-- Share Buttons -->
+<div class="share-buttons">
+  <h3>Share With Your Friends</h3>
+  <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=YOUR_PAGE_URL" target="_blank">Facebook</a>
+  <a class="btn tw" href="https://twitter.com/intent/tweet?url=YOUR_PAGE_URL" target="_blank">Twitter</a>
+  <a class="btn tg" href="https://t.me/share/url?url=YOUR_PAGE_URL" target="_blank">Telegram</a>
+  <a class="btn li" href="https://www.linkedin.com/shareArticle?mini=true&url=YOUR_PAGE_URL" target="_blank">LinkedIn</a>
+  <a class="btn ig" href="https://www.instagram.com/share?url=YOUR_PAGE_URL" target="_blank">Instagram</a>
+  <a class="btn yt" href="https://www.youtube.com/share?url=YOUR_PAGE_URL" target="_blank">YouTube</a>
+  <a class="btn wa" href="https://wa.me/YOUR_PHONE_NUMBER" target="_blank">WhatsApp</a>
+</div>
 
-<footer>
-  <div class="share-buttons">
-    <h3>Share Our Store</h3>
-    <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=https://bestshoppingstore.github.io" target="_blank">Facebook</a>
-    <a class="btn tw" href="https://twitter.com/intent/tweet?url=https://bestshoppingstore.github.io" target="_blank">Twitter</a>
-    <a class="btn tg" href="https://t.me/share/url?url=https://bestshoppingstore.github.io" target="_blank">Telegram</a>
-    <a class="btn wa" href="https://wa.me/?text=Check%20out%20this%20store%20https://bestshoppingstore.github.io" target="_blank">WhatsApp</a>
-  </div>
-</footer>
+<!-- WhatsApp button -->
+<a href="https://wa.me/+93798933435" class="whatsapp-button"></a>
+
 </body>
 </html>
