--- a/index.html
+++ b/index.html
@@ -164,6 +164,31 @@
   <a class="category" href="https://www.amazon.com/s?k=gift+ideas&tag=bestshopp0cd1-20">Gift Ideas</a>
   <a class="category" href="https://www.amazon.com/s?k=subscription+boxes&tag=bestshopp0cd1-20">Subscription Boxes</a>
   <a class="category" href="https://www.amazon.com/s?k=food&tag=bestshopp0cd1-20">Food</a>
+  <a class="category" href="https://www.amazon.com/s?k=appliances&tag=bestshopp0cd1-20">Appliances</a>
+  <a class="category" href="https://www.amazon.com/s?k=crafts&tag=bestshopp0cd1-20">Crafts</a>
+  <a class="category" href="https://www.amazon.com/s?k=collectibles&tag=bestshopp0cd1-20">Collectibles</a>
+  <a class="category" href="https://www.amazon.com/s?k=healthcare&tag=bestshopp0cd1-20">Healthcare</a>
+  <a class="category" href="https://www.amazon.com/s?k=stationery&tag=bestshopp0cd1-20">Stationery</a>
+  <a class="category" href="https://www.amazon.com/s?k=antiques&tag=bestshopp0cd1-20">Antiques</a>
+  <a class="category" href="https://www.amazon.com/s?k=outdoor+furniture&tag=bestshopp0cd1-20">Outdoor Furniture</a>
+  <a class="category" href="https://www.amazon.com/s?k=toys+and+games&tag=bestshopp0cd1-20">Toys & Games</a>
+  <a class="category" href="https://www.amazon.com/s?k=bicycles&tag=bestshopp0cd1-20">Bicycles</a>
+  <a class="category" href="https://www.amazon.com/s?k=party+supplies&tag=bestshopp0cd1-20">Party Supplies</a>
+  <a class="category" href="https://www.amazon.com/s?k=electronics&tag=bestshopp0cd1-20">Electronics</a>
+  <a class="category" href="https://www.amazon.com/s?k=tools+and+home+improvement&tag=bestshopp0cd1-20">Tools & Home Improvement</a>
+  <a class="category" href="https://www.amazon.com/s?k=video+games&tag=bestshopp0cd1-20">Video Games</a>
+  <a class="category" href="https://www.amazon.com/s?k=gift+cards&tag=bestshopp0cd1-20">Gift Cards</a>
+  <a class="category" href="https://www.amazon.com/s?k=bath+accessories&tag=bestshopp0cd1-20">Bath Accessories</a>
+  <a class="category" href="https://www.amazon.com/s?k=books+for+adults&tag=bestshopp0cd1-20">Books for Adults</a>
+  <a class="category" href="https://www.amazon.com/s?k=clothing+for+men&tag=bestshopp0cd1-20">Clothing for Men</a>
+  <a class="category" href="https://www.amazon.com/s?k=clothing+for+women&tag=bestshopp0cd1-20">Clothing for Women</a>
+  <a class="category" href="https://www.amazon.com/s?k=art+supplies&tag=bestshopp0cd1-20">Art Supplies</a>
+  <a class="category" href="https://www.amazon.com/s?k=garden+tools&tag=bestshopp0cd1-20">Garden Tools</a>
+  <a class="category" href="https://www.amazon.com/s?k=shaving+and+grooming&tag=bestshopp0cd1-20">Shaving & Grooming</a>
+  <a class="category" href="https://www.amazon.com/s?k=toothbrushes&tag=bestshopp0cd1-20">Toothbrushes</a>
+  <a class="category" href="https://www.amazon.com/s?k=eye+care&tag=bestshopp0cd1-20">Eye Care</a>
+  <a class="category" href="https://www.amazon.com/s?k=beauty+tools&tag=bestshopp0cd1-20">Beauty Tools</a>
+  <a class="category" href="https://www.amazon.com/s?k=home+improvement&tag=bestshopp0cd1-20">Home Improvement</a>
 </div>
 
 <!-- Share Buttons -->
