--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     }
     footer {
       background-color: #1e90ff;
-      color: white;
+      color: blue;
       padding: 30px 20px;
       margin-top: 40px;
     }
@@ -191,17 +191,33 @@
   <a class="category" href="https://www.amazon.com/s?k=home+improvement&tag=bestshopp0cd1-20">Home Improvement</a>
 </div>
 
-<!-- Share Buttons -->
-<div class="share-buttons">
-  <h3>Share With Your Friends</h3>
-  <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=YOUR_PAGE_URL" target="_blank">Facebook</a>
-  <a class="btn tw" href="https://twitter.com/intent/tweet?url=YOUR_PAGE_URL" target="_blank">Twitter</a>
-  <a class="btn tg" href="https://t.me/share/url?url=YOUR_PAGE_URL" target="_blank">Telegram</a>
-  <a class="btn li" href="https://www.linkedin.com/shareArticle?mini=true&url=YOUR_PAGE_URL" target="_blank">LinkedIn</a>
-  <a class="btn ig" href="https://www.instagram.com/share?url=YOUR_PAGE_URL" target="_blank">Instagram</a>
-  <a class="btn yt" href="https://www.youtube.com/share?url=YOUR_PAGE_URL" target="_blank">YouTube</a>
-  <a class="btn wa" href="https://wa.me/YOUR_PHONE_NUMBER" target="_blank">WhatsApp</a>
+</a>
 </div>
+
+<div class="share-buttons">
+  <h3>Follow Us on Social Media:</h3>
+  <a class="btn fb" href="https://www.facebook.com/yourpage" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="30px" />
+    Facebook
+  </a>
+  <a class="btn tw" href="https://twitter.com/yourprofile" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Twitter_Logo_as_of_2021.svg" alt="Twitter" width="30px" />
+    Twitter
+  </a>
+  <a class="btn ig" href="https://www.instagram.com/yourprofile" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram" width="30px" />
+    Instagram
+  </a>
+  <a class="btn yt" href="https://www.youtube.com/c/yourchannel" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/YouTube_icon_%282013-2017%29.svg" alt="YouTube" width="30px" />
+    YouTube
+  </a>
+  <a class="btn wa" href="https://wa.me/yourwhatsappnumber" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="30px" />
+    WhatsApp
+  </a>
+</div>
+
 
 <!-- WhatsApp button -->
 <a href="https://wa.me/+93798933435" class="whatsapp-button"></a>
