--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     footer {
-      background-color: #1e90ff;
-      color: blue;
-      padding: 30px 20px;
+        background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 20px;
       margin-top: 40px;
     }
     .share-buttons {
@@ -200,17 +201,17 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="30px" />
     Facebook
   </a>
-  <a class="btn tw" href="https://twitter.com/yourprofile" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/Twitter_Logo_as_of_2021.svg" alt="Twitter" width="30px" />
-    Twitter
+  <a href="https://twitter.com/" target="_blank">
+  <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" width="40" height="40">
+</a>
   </a>
   <a class="btn ig" href="https://www.instagram.com/yourprofile" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram" width="30px" />
     Instagram
   </a>
-  <a class="btn yt" href="https://www.youtube.com/c/yourchannel" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a0/YouTube_icon_%282013-2017%29.svg" alt="YouTube" width="30px" />
-    YouTube
+  <a href="https://www.youtube.com/" target="_blank">
+  <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube" width="40" height="40">
+</a>
   </a>
   <a class="btn wa" href="https://wa.me/yourwhatsappnumber" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="30px" />
