--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     }
     footer {
         background-color: #222;
-      color: white;
+      color: blue;
       text-align: center;
       padding: 20px;
       margin-top: 40px;
@@ -208,9 +208,9 @@
   <a class="btn ig" href="https://www.instagram.com/yourprofile" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram" width="30px" />
     Instagram
-  </a>
-  <a href="https://www.youtube.com/" target="_blank">
-  <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png" alt="YouTube" width="40" height="40">
+  <a class="btn yt" href="https://www.youtube.com/yourchannel" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" width="30px" />
+  YouTube
 </a>
   </a>
   <a class="btn wa" href="https://wa.me/yourwhatsappnumber" target="_blank">
