--- a/index.html
+++ b/index.html
@@ -66,11 +66,9 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     footer {
-        background-color: #222;
-      color: blue;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
+   background-color: #0073e6;
+      color: white;
+      padding: 30px 0;
     }
     .share-buttons {
       margin-top: 20px;
@@ -197,22 +195,27 @@
 
 <div class="share-buttons">
   <h3>Follow Us on Social Media:</h3>
+<div class="social-buttons">
   <a class="btn fb" href="https://www.facebook.com/yourpage" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="30px" />
     Facebook
   </a>
-  <a href="https://twitter.com/" target="_blank">
-  <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" width="40" height="40">
-</a>
+
+  <a class="btn tw" href="https://twitter.com/" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" width="30px" />
+    Twitter
   </a>
+
   <a class="btn ig" href="https://www.instagram.com/yourprofile" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram" width="30px" />
     Instagram
-  <a class="btn yt" href="https://www.youtube.com/yourchannel" target="_blank">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" width="30px" />
-  YouTube
-</a>
   </a>
+
+  <a class="btn yt" href="https://www.youtube.com/yourchannel" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" width="30px" />
+    YouTube
+  </a>
+
   <a class="btn wa" href="https://wa.me/yourwhatsappnumber" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="30px" />
     WhatsApp
