--- a/index.html
+++ b/index.html
@@ -190,37 +190,19 @@
   <a class="category" href="https://www.amazon.com/s?k=home+improvement&tag=bestshopp0cd1-20">Home Improvement</a>
 </div>
 
-</a>
-</div>
-
-<div class="share-buttons">
-  <h3>Follow Us on Social Media:</h3>
-<div class="social-buttons">
-  <a class="btn fb" href="https://www.facebook.com/yourpage" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="30px" />
-    Facebook
-  </a>
-
-  <a class="btn tw" href="https://twitter.com/" target="_blank">
-    <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" width="30px" />
-    Twitter
-  </a>
-
-  <a class="btn ig" href="https://www.instagram.com/yourprofile" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg" alt="Instagram" width="30px" />
-    Instagram
-  </a>
-
-  <a class="btn yt" href="https://www.youtube.com/yourchannel" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube" width="30px" />
-    YouTube
-  </a>
-
-  <a class="btn wa" href="https://wa.me/yourwhatsappnumber" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="30px" />
-    WhatsApp
-  </a>
-</div>
+<footer>
+  <div class="share-buttons">
+    <h3>Share Our Store</h3>
+    <a class="btn fb" href="#" target="_blank">Facebook</a>
+    <a class="btn tw" href="#" target="_blank">Twitter</a>
+    <a class="btn wa" href="#" target="_blank">WhatsApp</a>
+    <a class="btn tg" href="#" target="_blank">Telegram</a>
+    <a class="btn li" href="#" target="_blank">LinkedIn</a>
+    <a class="btn ig" href="#" target="_blank">Instagram</a>
+    <a class="btn yt" href="#" target="_blank">YouTube</a>
+    <a class="btn em" href="mailto:example@example.com">Email</a>
+  </div>
+</footer>
 
 
 <!-- WhatsApp button -->
