--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     header {
       background-color: #0073e6;
       color: white;
-      padding: 30px 0;
+       padding: 5px 0
+       height: 50px;
     }
     h1 {
       margin: 0;
