--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     header {
       background-color: #0073e6;
       color: white;
-       padding: 10px 0
-       height: 50px;
+       padding: 5px;
+       height: 60px;
     }
     h1 {
       margin: 0;
