--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
       text-align: center;
     }
     header {
+    position: fixed;
+     top: 0;
+     width: 100%;
       background-color: #0073e6;
       color: white;
        padding: 10px;
        height: 80px;
+      z-index: 1000;
     }
     h1 {
       margin: 0;
@@ -69,7 +73,7 @@
     footer {
    background-color: #0073e6;
       color: white;
-      padding: 30px 0;
+      padding: 20px 0;
     }
     .share-buttons {
       margin-top: 20px;
