--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
       text-align: center;
     }
     header {
-    position: fixed;
-     top: 0;
-     width: 100%;
       background-color: #0073e6;
       color: white;
        padding: 10px;
        height: 80px;
-      z-index: 1000;
     }
     h1 {
       margin: 0;
@@ -32,7 +28,7 @@
     }
     .intro {
       margin-top: 20px;
-      font-size: 18px;
+      font-size-bold: 18px;
       color: #333;
     }
     .categories {
