--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       border-radius: 50%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-    .email-button {
+    .gmail-button {
       position: fixed;
       bottom: 20px;
       left: 20px;
