--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 
 <!-- WhatsApp button -->
 <a href="https://wa.me/+93798933435" class="whatsapp-button"></a>
-  <!-- email button -->
-<a href="mailto:bestshopping184@gmail.com" class="email-button" target="_blank"></a>
+  <!-- gmail button -->
+<a href="mailto:bestshopping184@gmail.com" class="gmail-button" target="_blank"></a>
 
 </body>
 </html>
