--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
       border-radius: 50%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-    .gmail-button {
+    .email-button {
       position: fixed;
       bottom: 20px;
       left: 20px;
       width: 60px;
       height: 60px;
-       background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a5/Envelope_icon.svg');
+      background-image: url('https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox');
       background-size: cover;
       border-radius: 50%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -219,8 +219,8 @@
 
 <!-- WhatsApp button -->
 <a href="https://wa.me/+93798933435" class="whatsapp-button"></a>
-  <!-- gmail button -->
-<a href="mailto:bestshopping184@gmail.com" class="gmail-button" target="_blank"></a>
+  <!-- email button -->
+<a href="mailto:bestshopping184@gmail.com" class="email-button" target="_blank"></a>
 
 </body>
 </html>
