--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       border-radius: 50%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-    .email-button {
+    .gmail-button {
       position: fixed;
       bottom: 20px;
       left: 20px;
@@ -219,8 +219,8 @@
 
 <!-- WhatsApp button -->
 <a href="https://wa.me/+93798933435" class="whatsapp-button"></a>
-  <!-- email button -->
-<a href="mailto:bestshopping184@gmail.com" class="email-button" target="_blank"></a>
+  <!-- gmail button -->
+<a href="mailto:bestshopping184@gmail.com" class="gmail-button" target="_blank"></a>
 
 </body>
 </html>
