--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       left: 20px;
       width: 60px;
       height: 60px;
-      background-image: url('https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox');
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a5/Envelope_icon.svg');
       background-size: cover;
       border-radius: 50%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
