--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     .email-button {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
-      width: 60px;
-      height: 60px;
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a5/Envelope_icon.svg');
-      background-size: cover;
-      border-radius: 50%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    width: 60px;
+    height: 60px;
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/a/a5/Envelope_icon.svg'); /* د ایمیل ایکن URL */
+    background-size: cover;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
     }
     footer {
    background-color: #0073e6;
