--- a/index.html
+++ b/index.html
@@ -194,14 +194,12 @@
 <footer>
   <div class="share-buttons">
     <h3>Share Our Store</h3>
-    <a class="btn fb" href="#" target="_blank">Facebook</a>
-    <a class="btn tw" href="#" target="_blank">Twitter</a>
-    <a class="btn wa" href="#" target="_blank">WhatsApp</a>
-    <a class="btn tg" href="#" target="_blank">Telegram</a>
-    <a class="btn li" href="#" target="_blank">LinkedIn</a>
-    <a class="btn ig" href="#" target="_blank">Instagram</a>
-    <a class="btn yt" href="#" target="_blank">YouTube</a>
-    <a class="btn em" href="mailto:example@example.com">Email</a>
+    <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=https://bestshoppingstore.github.io" target="_blank">Facebook</a>
+    <a class="btn tw" href="https://twitter.com/intent/tweet?url=https://bestshoppingstore.github.io&text=Check%20out%20this%20amazing%20store!" target="_blank">Twitter</a>
+    <a class="btn wa" href="https://api.whatsapp.com/send?text=Check%20out%20this%20store:%20https://bestshoppingstore.github.io" target="_blank">WhatsApp</a>
+    <a class="btn tg" href="https://t.me/share/url?url=https://bestshoppingstore.github.io&text=Awesome%20shopping%20website" target="_blank">Telegram</a>
+    <a class="btn li" href="https://www.linkedin.com/sharing/share-offsite/?url=https://bestshoppingstore.github.io" target="_blank">LinkedIn</a>
+    <a class="btn em" href="mailto:?subject=Great%20Shopping%20Store&body=Check%20this%20site:%20https://bestshoppingstore.github.io">Email</a>
   </div>
 </footer>
 
