--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
       color: white;
       padding: 20px 0;
     }
-    .share-buttons {
+   .share-buttons {
       margin-top: 20px;
     }
+
     .share-buttons h3 {
       color: white;
       margin-bottom: 15px;
     }
+
     .share-buttons .btn {
       display: inline-block;
       margin: 5px 10px;
@@ -88,6 +90,7 @@
       color: white;
       transition: background 0.3s ease;
     }
+
     .fb { background: #3b5998; }
     .fb:hover { background: #2d4373; }
 
@@ -194,12 +197,14 @@
 <footer>
   <div class="share-buttons">
     <h3>Share Our Store</h3>
-    <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=https://bestshoppingstore.github.io" target="_blank">Facebook</a>
-    <a class="btn tw" href="https://twitter.com/intent/tweet?url=https://bestshoppingstore.github.io&text=Check%20out%20this%20amazing%20store!" target="_blank">Twitter</a>
-    <a class="btn wa" href="https://api.whatsapp.com/send?text=Check%20out%20this%20store:%20https://bestshoppingstore.github.io" target="_blank">WhatsApp</a>
-    <a class="btn tg" href="https://t.me/share/url?url=https://bestshoppingstore.github.io&text=Awesome%20shopping%20website" target="_blank">Telegram</a>
-    <a class="btn li" href="https://www.linkedin.com/sharing/share-offsite/?url=https://bestshoppingstore.github.io" target="_blank">LinkedIn</a>
-    <a class="btn em" href="mailto:?subject=Great%20Shopping%20Store&body=Check%20this%20site:%20https://bestshoppingstore.github.io">Email</a>
+      <a class="btn fb" href="https://www.facebook.com/sharer/sharer.php?u=https://bestshoppingstore.github.io" target="_blank">Facebook</a>
+      <a class="btn tw" href="https://twitter.com/intent/tweet?url=https://bestshoppingstore.github.io" target="_blank">Twitter</a>
+      <a class="btn wa" href="https://api.whatsapp.com/send?text=Check%20this%20out:%20https://bestshoppingstore.github.io" target="_blank">WhatsApp</a>
+      <a class="btn tg" href="https://t.me/share/url?url=https://bestshoppingstore.github.io" target="_blank">Telegram</a>
+      <a class="btn li" href="https://www.linkedin.com/sharing/share-offsite/?url=https://bestshoppingstore.github.io" target="_blank">LinkedIn</a>
+      <a class="btn ig" href="https://www.instagram.com" target="_blank">Instagram</a>
+      <a class="btn yt" href="https://www.youtube.com" target="_blank">YouTube</a>
+     
   </div>
 </footer>
 
