--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       <a class="btn li" href="https://www.linkedin.com/sharing/share-offsite/?url=https://bestshoppingstore.github.io" target="_blank">LinkedIn</a>
       <a class="btn ig" href="https://www.instagram.com" target="_blank">Instagram</a>
       <a class="btn yt" href="https://www.youtube.com" target="_blank">YouTube</a>
+      <a class="btn em" href="mailto:?subject=Check%20this%20site&body=Visit%20https://bestshoppingstore.github.io" target="_blank">Email</a>
      
   </div>
 </footer>
