--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Best Shopping Store</title>
+  <img src="images/logo.png" alt="Alham Store Logo" style="height: 60px;">
   <style>
+    .logo {
+  height: 60px;
+  padding: 5px;
+}
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(to bottom, #f0f8ff, #e6f2ff);
