--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Best Shopping Store</title>
+ <header>
   <img src="images/logo.png" alt="Alham Store Logo" style="height: 60px;">
+</header>
   <style>
-    .logo {
+    .images/logo.png {
   height: 60px;
   padding: 5px;
 }
