--- a/index.html
+++ b/index.html
@@ -1,63 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Best Shopping Store</title>
+  <meta charset="UTF-8">
+  <title>Amazon Categories - Best Shopping Store</title>
   <style>
-    header {
-      display: flex;
-      align-items: center;
-      background-color: #f8f8f8;
-      padding: 10px 20px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    header img {
-      height: 60px;
-      margin-right: 15px;
-    }
-    .site-info {
-      display: flex;
-      flex-direction: column;
-    }
-    .site-info h1 {
-      margin: 0;
-      font-size: 20px;
-      color: #333;
-    }
-    .site-info p {
-      margin: 0;
-      font-size: 14px;
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <img src="Logo.png" alt="Alham Store Logo">
-    <div class="site-info">
-      <h1>Best Shopping Store</h1>
-      <p>"Welcome to Alham Afghan Page – Your Trusted Marketplace, Powered by Amazon"</p>
-    </div>
-  </header>
-
-</body>
-</html>
-
-    }
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #f0f8ff, #e6f2ff);
+      background: #f4f4f4;
       margin: 0;
       padding: 0;
-      text-align: center;
-    }
-    header {
-      background-color: #0073e6;
-      color: white;
-       padding: 10px;
-       height: 80px;
     }
     h1 {
       margin: 0;
