--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Amazon Categories - Best Shopping Store</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Best Shopping Store</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: linear-gradient(to bottom, #f0f8ff, #e6f2ff);
       margin: 0;
       padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #0073e6;
+      color: white;
+      padding: 30px 0;
     }
     h1 {
       margin: 0;
       font-size: 36px;
+    }
+    p.subtitle {
+      font-size: 18px;
+      margin-top: 10px;
     }
     p.subtitle {
       font-size: 18px;
