--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
       font-size: 18px;
       margin-top: 10px;
     }
-    p.subtitle {
-      font-size: 18px;
-      margin-top: 10px;
-    }
     .intro {
       margin-top: 20px;
-      font-size-bold: 18px;
+      font-weight: bold;
+      font-size: 18px;
       color: #333;
     }
     .categories {
@@ -70,7 +67,7 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     footer {
-   background-color: #0073e6;
+      background-color: #0073e6;
       color: white;
       padding: 20px 0;
     }
