--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
       text-align: center;
     }
     header {
-      background-color: #0073e6;
-      color: white;
-      padding: 30px 0;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+     height: 80px;
     }
     h1 {
       margin: 0;
