--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       text-align: center;
     }
     header {
-    background-color: #333;
+    background-color: #0073e6;
     color: white;
     text-align: center;
     padding: 10px;
