--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
       border-radius: 50%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
+     .fb-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      background-image: url("https://www.facebook.com/profile.php?id=61575762930696");
+      background-size: cover;
+      border-radius: 50%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
     footer {
       background-color: #0073e6;
       color: white;
@@ -210,6 +221,9 @@
 
 <!-- WhatsApp button -->
 <a href="https://wa.me/+93798933435" class="whatsapp-button"></a>
+<!-- fb button -->
+<a href="https://www.facebook.com/profile.php?id=61575762930696" target="_blank" class="btn fb">
+</a>
 
 </body>
 </html>
