--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
       border-radius: 50%;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-     .fb-button {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 60px;
-      height: 60px;
-      background-image: url("https://www.facebook.com/profile.php?id=61575762930696");
-      background-size: cover;
-      border-radius: 50%;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    .fb-button {
+     position: fixed;
+     bottom: 20px;
+     left: 20px;
+     width: 60px;
+     height: 60px;
+     background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg");
+     background-size: cover;
+     border-radius: 50%;
+     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     footer {
       background-color: #0073e6;
@@ -222,7 +222,7 @@
 <!-- WhatsApp button -->
 <a href="https://wa.me/+93798933435" class="whatsapp-button"></a>
 <!-- fb button -->
-<a href="https://www.facebook.com/profile.php?id=61575762930696" target="_blank" class="btn fb">
+<a href="https://www.facebook.com/profile.php?id=61575762930696" target="_blank" class="fb-button"></a>
 </a>
 
 </body>
