--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       text-align: center;
     }
     header {
-    background-color: #0073e6;
-    color: white;
-    text-align: center;
-    padding: 10px;
-     height: 80px;
+      background-color: #0073e6;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      height: 80px;
     }
     h1 {
       margin: 0;
@@ -69,25 +69,38 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
     .fb-button {
-     position: fixed;
-     bottom: 20px;
-     left: 20px;
-     width: 60px;
-     height: 60px;
-     background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg");
-     background-size: cover;
-     border-radius: 50%;
-     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      width: 60px;
+      height: 60px;
+      background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg");
+      background-size: cover;
+      border-radius: 50%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-      .Search Box with Suggestions{
-              border: 1px solid #ccc;
+
+    /* Search suggestions style */
+    #searchBox {
+      margin-top: 30px;
+      padding: 10px;
+      font-size: 16px;
+      width: 220px;
+    }
+
+    #suggestions {
+      border: 1px solid #ccc;
       max-height: 150px;
       overflow-y: auto;
       display: none;
       position: absolute;
       background: #fff;
       z-index: 999;
-      width: 200px;
+      width: 220px;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
     }
 
     #suggestions div {
@@ -98,14 +111,14 @@
     #suggestions div:hover {
       background-color: #f0f0f0;
     }
-    
-    }
+
     footer {
       background-color: #0073e6;
       color: white;
       padding: 20px 0;
     }
-   .share-buttons {
+
+    .share-buttons {
       margin-top: 20px;
     }
 
@@ -125,26 +138,26 @@
       transition: background 0.3s ease;
     }
 
-.fb { background: #3b5998; }
-.fb:hover { background: #2d4373; }
+    .fb { background: #3b5998; }
+    .fb:hover { background: #2d4373; }
 
-.tw { background: #1da1f2; }
-.tw:hover { background: #0d95e8; }
+    .tw { background: #1da1f2; }
+    .tw:hover { background: #0d95e8; }
 
-.wa { background: #25D366; }
-.wa:hover { background: #1ebe57; }
+    .wa { background: #25D366; }
+    .wa:hover { background: #1ebe57; }
 
-.tg { background: #0088cc; }
-.tg:hover { background: #0077b5; }
+    .tg { background: #0088cc; }
+    .tg:hover { background: #0077b5; }
 
-.ig { background: #C13584; }
-.ig:hover { background: #962c6b; }
+    .ig { background: #C13584; }
+    .ig:hover { background: #962c6b; }
 
-.yt { background: #FF0000; }
-.yt:hover { background: #e60000; }
+    .yt { background: #FF0000; }
+    .yt:hover { background: #e60000; }
 
-.em { background: #6c757d; }
-.em:hover { background: #5a6268; }
+    .em { background: #6c757d; }
+    .em:hover { background: #5a6268; }
   </style>
 </head>
 <body>
@@ -517,18 +530,30 @@
 </footer>
 
 
+<!-- Search box -->
+<input type="text" id="searchBox" placeholder="Search..." autocomplete="off" onkeyup="showSuggestions(this.value)">
+<div id="suggestions"></div>
+
 <!-- WhatsApp button -->
 <a href="https://wa.me/+93798933435" class="whatsapp-button"></a>
+
 <!-- fb button -->
 <a href="https://www.facebook.com/profile.php?id=61575762930696" target="_blank" class="fb-button"></a>
-</a>
-  <input type="text" id="searchBox" placeholder="Search..." autocomplete="off" onkeyup="showSuggestions(this.value)">
-<div id="suggestions"></div>
+
+<footer>
+  <div class="share-buttons">
+    <h3>Share this page:</h3>
+    <a href="#" class="btn fb">Facebook</a>
+    <a href="#" class="btn tw">Twitter</a>
+    <a href="#" class="btn wa">WhatsApp</a>
+    <a href="#" class="btn tg">Telegram</a>
+    <a href="#" class="btn ig">Instagram</a>
+    <a href="#" class="btn yt">YouTube</a>
+    <a href="#" class="btn em">Email</a>
+  </div>
+</footer>
+
 <script>
-  const categories = [
-    "Fashion", "Health", "Technology", "Sports", "Home",
-    "Beauty", "Toys", "Electronics", "Books", "Shoes", "Clothing"
-  ];
 
   function showSuggestions(value) {
     const suggestionBox = document.getElementById("suggestions");
@@ -561,5 +586,6 @@
     suggestionBox.style.display = "block";
   }
 </script>
+
 </body>
-</html>
+</html>>
