--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     .ig:hover { background: #962c6b; }
     .yt { background: #FF0000; }
     .yt:hover { background: #e60000; }
-    .em {ॐ background: #6c757d; }
+    .em { background: #6c757d; }
     .em:hover { background: #5a6268; }
   </style>
 </head>
